[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/Dungeon Sprites/level_background_black.png" type="Texture" id=1]
[ext_resource path="res://scripts/MainMenu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/Player Sprites/Player_Walk.png" type="Texture" id=3]
[ext_resource path="res://assets/Lights/TestGradient.png" type="Texture" id=4]
[ext_resource path="res://assets/Tilesets/DungeonTiles_01.tres" type="TileSet" id=5]
[ext_resource path="res://assets/Dungeon Sprites/Campfire/02_campfire_Animation4.png" type="Texture" id=6]
[ext_resource path="res://assets/Dungeon Sprites/Campfire/02_campfire_Animation1.png" type="Texture" id=7]
[ext_resource path="res://assets/Dungeon Sprites/Campfire/02_campfire_Animation3.png" type="Texture" id=8]
[ext_resource path="res://assets/Dungeon Sprites/Campfire/02_campfire_Animation2.png" type="Texture" id=9]
[ext_resource path="res://assets/SavedAnimations/Player_Torch_Flicker.tres" type="Animation" id=10]
[ext_resource path="res://assets/Fonts/SpookMansionRegular-ywBde.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://scripts/MainMenu/VolumeSlider.gd" type="Script" id=13]
[ext_resource path="res://assets/Control Sprites/XBOX_One_Gamepad.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
size = 150
font_data = ExtResource( 12 )

[sub_resource type="ShortCut" id=2]

[sub_resource type="ShortCut" id=3]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 96, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 0, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 96, 144, 48, 48 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=14]
radius = 56.0
height = 44.0001

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=16]
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.15, 1.5, 1.4, 1.3, 1.5, 1.4, 1.3, 1.15 ]
}

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="MenuControl" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -268.0
margin_top = -192.0
margin_right = 268.0
margin_bottom = 192.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GamepadControls" type="Sprite" parent="MenuControl"]
visible = false
position = Vector2( 268, 196 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 14 )

[node name="GameTitle" type="Label" parent="MenuControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -310.5
margin_top = -159.5
margin_right = 368.5
margin_bottom = 5.5
custom_fonts/font = SubResource( 1 )
text = "Dark Whispers"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="MenuControl" groups=[
"MenuButtons",
]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 19.0
margin_right = 50.0
margin_bottom = 69.0
focus_neighbour_bottom = NodePath("../Options")
focus_next = NodePath("../Options")
focus_previous = NodePath(".")
keep_pressed_outside = true
shortcut = SubResource( 2 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="MenuControl" groups=[
"MenuButtons",
]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 129.0
margin_right = 50.0
margin_bottom = 179.0
focus_neighbour_top = NodePath("../Options")
focus_next = NodePath("../Start")
focus_previous = NodePath(".")
keep_pressed_outside = true
shortcut = SubResource( 3 )
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="MenuControl" groups=[
"MenuButtons",
]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 74.0
margin_right = 50.0
margin_bottom = 124.0
focus_neighbour_top = NodePath("../Start")
focus_neighbour_bottom = NodePath("../Exit")
focus_next = NodePath("../Exit")
focus_previous = NodePath("../Start")
text = "OPTIONS"

[node name="VolumeSlider" type="HSlider" parent="MenuControl" groups=[
"VolumeMenu",
]]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 75.0
margin_right = 50.0
margin_bottom = 125.0
hint_tooltip = "Modifies Game Volume"
focus_neighbour_right = NodePath("Mute")
focus_neighbour_bottom = NodePath("VolumeBack")
focus_next = NodePath("Mute")
focus_previous = NodePath("VolumeBack")
max_value = 1.0
step = 0.05
script = ExtResource( 13 )

[node name="Label" type="Label" parent="MenuControl/VolumeSlider"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.5
margin_top = -29.0
margin_right = 24.5
margin_bottom = -15.0
text = "Volume"
align = 1
valign = 1

[node name="Mute" type="Button" parent="MenuControl/VolumeSlider" groups=[
"VolumeMenu",
]]
margin_left = 106.0
margin_top = 15.0
margin_right = 130.0
margin_bottom = 35.0
hint_tooltip = "Mutes Game Audio"
focus_neighbour_left = NodePath("..")
focus_neighbour_bottom = NodePath("../VolumeBack")
focus_next = NodePath("../VolumeBack")
focus_previous = NodePath("..")
toggle_mode = true
text = "M"

[node name="VolumeBack" type="Button" parent="MenuControl/VolumeSlider" groups=[
"VolumeMenu",
]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 29.0
margin_right = 50.0
margin_bottom = 79.0
focus_neighbour_top = NodePath("..")
focus_neighbour_right = NodePath("../Mute")
focus_next = NodePath("..")
focus_previous = NodePath(".")
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Button" parent="MenuControl" groups=[
"OptionsMenu",
]]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 19.0
margin_right = 50.0
margin_bottom = 69.0
focus_neighbour_bottom = NodePath("../Controls")
focus_next = NodePath("../Controls")
focus_previous = NodePath("../Back")
text = "AUDIO"

[node name="Controls" type="Button" parent="MenuControl" groups=[
"OptionsMenu",
]]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 74.0
margin_right = 50.0
margin_bottom = 124.0
focus_neighbour_top = NodePath("../Audio")
focus_neighbour_bottom = NodePath("../Back")
focus_next = NodePath("../Back")
focus_previous = NodePath("../Audio")
text = "CONTROLS"

[node name="ControlBack" type="Button" parent="MenuControl" groups=[
"ControlButtons",
]]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 289.0
margin_right = 50.0
margin_bottom = 339.0
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="MenuControl" groups=[
"OptionsMenu",
]]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 129.0
margin_right = 50.0
margin_bottom = 179.0
focus_neighbour_top = NodePath("../Controls")
focus_next = NodePath("../Audio")
focus_previous = NodePath("../Controls")
text = "BACK"

[node name="GamepadPopup" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.0
margin_top = -80.0
margin_right = 134.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes" type="Button" parent="GamepadPopup" groups=[
"GamepadPopupButtons",
]]
margin_left = 22.0
margin_top = 99.0
margin_right = 94.0
margin_bottom = 148.0
focus_neighbour_right = NodePath("../No")
focus_next = NodePath("../No")
focus_previous = NodePath(".")
text = "YES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="Button" parent="GamepadPopup" groups=[
"GamepadPopupButtons",
]]
margin_left = 174.0
margin_top = 99.0
margin_right = 246.0
margin_bottom = 148.0
focus_neighbour_left = NodePath("../Yes")
focus_next = NodePath("../Yes")
focus_previous = NodePath(".")
text = "NO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GamepadLabel" type="Label" parent="GamepadPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = -78.0
margin_right = 120.0
margin_bottom = 21.0
text = "GAMEPAD DETECTED

Use Gamepad Controls?

(\"No\" sets default keyboard controls)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CanvasModulate" type="CanvasModulate" parent="CanvasLayer"]
color = Color( 0, 0, 0, 1 )

[node name="MenuTiles" type="TileMap" parent="CanvasLayer"]
position = Vector2( 3.05176e-05, 6.10352e-05 )
scale = Vector2( 5, 5 )
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
cell_tile_origin = 1
collision_layer = 4
collision_mask = 4
format = 1
tile_data = PoolIntArray( 262146, 0, 0, 262147, 0, 1, 262148, 0, 1, 262149, 0, 1, 262150, 0, 2, 262162, 0, 0, 262163, 0, 1, 262164, 0, 1, 262165, 0, 1, 262166, 0, 2, 327682, 0, 65536, 327683, 0, 65537, 327684, 0, 65537, 327685, 0, 65537, 327686, 0, 65538, 327698, 0, 65536, 327699, 0, 65537, 327700, 0, 65537, 327701, 0, 65537, 327702, 0, 65538, 393218, 0, 131072, 393219, 0, 131073, 393220, 0, 131073, 393221, 0, 131073, 393222, 0, 131074, 393234, 0, 131072, 393235, 0, 131073, 393236, 0, 131073, 393237, 0, 131073, 393238, 0, 131074, 458754, 6, 0, 458755, 6, 0, 458756, 6, 0, 458757, 6, 0, 458758, 6, 0, 458770, 6, 0, 458771, 6, 0, 458772, 6, 0, 458773, 6, 0, 458774, 6, 0, 524290, 6, 0, 524291, 6, 0, 524292, 6, 0, 524293, 6, 0, 524294, 6, 0, 524306, 6, 0, 524307, 6, 0, 524308, 6, 0, 524309, 6, 0, 524310, 6, 0, 589826, 5, 0, 589827, 5, 0, 589828, 5, 0, 589829, 5, 0, 589830, 5, 0, 589842, 5, 0, 589843, 5, 0, 589844, 5, 0, 589845, 5, 0, 589846, 5, 0 )

[node name="Bot" type="KinematicBody2D" parent="CanvasLayer"]
position = Vector2( 344, 558 )

[node name="PlayerBot" type="AnimatedSprite" parent="CanvasLayer/Bot"]
light_mask = 7
scale = Vector2( 3, 3 )
frames = SubResource( 13 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Bot"]
shape = SubResource( 14 )

[node name="Light2D" type="Light2D" parent="CanvasLayer"]
position = Vector2( 332, 573 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
texture_scale = 0.1
color = Color( 0.760784, 0.47451, 0.0666667, 1 )
range_layer_min = 1
range_layer_max = 3
shadow_enabled = true
shadow_gradient_length = 1.3
shadow_filter = 3
shadow_filter_smooth = 11.1
__meta__ = {
"_editor_description_": ""
}

[node name="TorchAnimation" type="AnimationPlayer" parent="CanvasLayer/Light2D"]
anims/TorchFlicker = ExtResource( 10 )

[node name="Fire" type="AnimatedSprite" parent="CanvasLayer"]
position = Vector2( 1656, 504 )
scale = Vector2( 3, 3 )
frames = SubResource( 15 )
frame = 2
playing = true

[node name="FireLight" type="Light2D" parent="CanvasLayer/Fire"]
position = Vector2( 0.999939, 15 )
texture = ExtResource( 4 )
texture_scale = 0.1
color = Color( 0.760784, 0.47451, 0.0666667, 1 )
energy = 1.15
range_layer_min = 1
range_layer_max = 3
shadow_enabled = true
shadow_gradient_length = 1.3
shadow_filter = 3
shadow_filter_smooth = 11.1
__meta__ = {
"_editor_description_": ""
}

[node name="FireAnimation" type="AnimationPlayer" parent="CanvasLayer/Fire/FireLight"]
anims/Flicker = SubResource( 16 )
[connection signal="pressed" from="MenuControl/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MenuControl/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="MenuControl/Options" to="." method="_on_Options_pressed"]
[connection signal="mouse_exited" from="MenuControl/VolumeSlider" to="MenuControl/VolumeSlider" method="release_focus"]
[connection signal="value_changed" from="MenuControl/VolumeSlider" to="MenuControl/VolumeSlider" method="_on_VolumeSlider_value_changed"]
[connection signal="toggled" from="MenuControl/VolumeSlider/Mute" to="MenuControl/VolumeSlider" method="_on_Mute_toggled"]
[connection signal="pressed" from="MenuControl/VolumeSlider/VolumeBack" to="MenuControl/VolumeSlider" method="_on_VolumeBack_pressed"]
[connection signal="pressed" from="MenuControl/Audio" to="." method="_on_Audio_pressed"]
[connection signal="pressed" from="MenuControl/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="MenuControl/ControlBack" to="." method="_on_ControlBack_pressed"]
[connection signal="pressed" from="MenuControl/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="GamepadPopup/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="GamepadPopup/No" to="." method="_on_No_pressed"]
